# gen-aws-federated-signin-url

./: Makefile  README.md  pyproject.toml
src/gen_aws_federated_signin_url/: __init__.py  gen_aws_federated_signin_url.py
