[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gen-aws-federated-signin-url"
description = "Generate AWS Federated Signin URL"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10.0"
dependencies = [
    "boto3>=1.26.152",
    "requests>=2.31.0",
]
dynamic = ["version"]

[tools.setuptools.package-dir]
gen_aws_federated_signin_url = "src/gen_aws_federated_signin_url"

[tool.setuptools_scm]
write_to = "src/gen_aws_federated_signin_url/_version.py"
